--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "babel-preset-es2015": "~6.6.*",
     "babel-preset-react": "~6.5.*",
     "webpack": "~1.12.*",
-    "webpack-dev-server": "~1.14.*"    
+    "webpack-dev-server": "~1.14.*"
   },
   "dependencies": {
-    "react": "^15.0.0",
+    "file-loader": "^0.9.0 ",
+    "image-webpack-loader": "^3.1.0",
+    "jquery": "^3.1.1",
+    "material-ui": "^0.16.0",
+    "react": "^15.4.1",
     "react-addons-update": "^15.0.2",
     "react-dom": "^15.0.0",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-
-    "material-ui": "^0.16.0",
-	"react-tap-event-plugin": "^2.0.1",
-    "image-webpack-loader": "^3.1.0",
-    "file-loader": "^0.9.0 ",
-    "jquery": "^3.1.1"
+    "react-search-input": "^0.10.3",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.5.2"
   }
 }
